--- a/Android/G3MAndroidPlanarViewerDemo/res/values/strings.xml
+++ b/Android/G3MAndroidPlanarViewerDemo/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">G3MAndroidPlanarViewerDemo</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_planar_v">G3MAndroidDemoActivity</string>
+    <string name="title_activity_planar_v">G3MAndroidPlanarViewerDemo</string>
     <string name="title_activity_planar_viewer_webview">PlanarViewerActivity</string>
 
 </resources>
