--- a/Android/G3MAndroidDemo/res/values/strings.xml
+++ b/Android/G3MAndroidDemo/res/values/strings.xml
@@ -9,10 +9,12 @@
     <string name="simplest_glob3">Simplest glob3</string>
     <string name="switch_layers">Switch Layers</string>
     <string name="title_activity_g3_msimplest">G3MSimplestActivity</string>
-     <string name="doubleGlob3">Double Glob3</string>
-     <string name="threedshapes">3d shapes</string>
-     <string name="markersLbl">Markers</string>
-      <string name="netCDF">NetCDF</string>
-      <string name="switchText">  Press button to switch base layer</string>
-       <string name="animation">  Press button to move or stop the shapes</string>
+    <string name="doubleGlob3">Double Glob3</string>
+    <string name="threedshapes">3d shapes</string>
+    <string name="markersLbl">Markers</string>
+    <string name="netCDF">NetCDF</string>
+    <string name="switchText">  Press button to switch base layer</string>
+    <string name="animation">  Press button to move or stop the shapes</string>
+    <string name="title_activity_g3_mbson">G3MBSON</string>
+
 </resources>
